gccida/c2/extend_value_for_giv
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7867:28: error: unknown type name 'induction_1'
rtx  extend_value_for_giv( induction_1 *v, rtx value) 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7885:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)ext_dependent, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7885:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)ext_dependent, 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7886:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ext_dependent), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7886:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ext_dependent), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7891:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)ext_dependent, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7891:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)ext_dependent, 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7892:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ext_dependent), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/loop.c:7892:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)ext_dependent), 
                 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/extend_value_for_giv/src/obj/loop.o] Error 1
